# ttcagris-utils

./: .gitignore  LICENSE  README.md
docker/: CHANGELOG.md  Dockerfile.cas.dev  Dockerfile.noti.dev  Dockerfile.supplier.dev  Dockerfile.webgw.dev  README.md  build-and-start.ps1  build-and-start.sh  docker-compose.dev.yml
docker/init-db/: 01_create_databases.sql  02_cas_schema.sh  03_noti_schema.sh  04_seed_test_data.sh  05_supplier_schema.sh
docs/: RepoLink.md  device_token.md
docs/archive/: BUILD_PROCESS_GUIDE.md  CENTRE_AUTH_SERVICE_FLOW.docx  DOCKER_DEV_QUICKSTART.md  DOCKER_SETUP_SUMMARY.md  INFRASTRUCTURE_CHECKLIST.md  NLD-34.doc  TOB45_MOBILEAPP_UPGRADE.md  [Portal] - Hub & HQ Portal - Order Mgmt.docx  [Portal] - Hub & HQ Portal - Supplier Management.docx  [Supplier] AgriOS App - Supplier Onboarding.docx  plan_30-34.md
docs/archive/CAS-archive-docs/: CHANGELOG.md  documentation_rules.md
docs/archive/dec17/: API_COOKBOOK.md  ENVIRONMENT_CONFIG_GUIDE.md  README.md
docs/archive/reports/: rp_001.md  (+1 more)
docs/confluence/: confluence_rules.md  documentation_rules.md  instruction.md
docs/tob37/: CLEANUP_CHECKLIST.md  FCM_INTEGRATION_GUIDE.md  FCM_TESTING_GUIDE.md  HUONG_DAN_CHAY_NOTI_SERVICE.md  MASTER_GUIDE.md  MIGRATION_PLAN.md  MOBILE_APP_TESTING_GUIDE.md  TOB37_IMPLEMENTATION.md  UPGRADE_GUIDE.md
docs/tob45/: TOB45_CAS_IMPLEMENTATION.md  ins2.md  instruction.md  seed_test_data.sql
docs/tob46/: COOKBOOK.md  IMPLEMENTATION_SUMMARY.md  TOB-46_SESSION_REPORT.md  TOB46_IMPLEMENTATION.md  history.md  instruction.md
tools/docs-translator/: .env.example  .gitignore  LICENSE  README.md  build.ps1  build.sh  docs-translator.yaml.example  pyproject.toml
tools/docs-translator/docs_translator/: __init__.py  logging.py
tools/docs-translator/docs_translator/cli/: __init__.py  main.py  wizard.py
tools/docs-translator/docs_translator/config/: __init__.py  manager.py  models.py
tools/docs-translator/docs_translator/parser/: __init__.py  markdown_parser.py  tokens.py
tools/docs-translator/docs_translator/translator/: __init__.py  core.py  prompts.py  providers.py
(+31 files in other folders)
